# switch-be

./: .gitignore  README.md  package-lock.json  package.json
src/: main.rs
src/handlers/: mod.rs
src/static/: form.html
switch-core/: Cargo.toml
switch-core/src/: main.rs
switch-core/src/domain/: mod.rs
switch-core/src/handlers/: mod.rs
switch-core/src/static/: form.html
switch-web/: .eslintcache  package-lock.json  package.json
switch-web/src/: App.js
